Fix clipping by footer
v0.2.1

--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -19,6 +19,10 @@
   font-size: inherit;
 }
 
+.splitter {
+  padding-bottom: 3em;
+}
+
 .footer {
   position: fixed;
   left: 0;
